fix: spacing, styles and

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -14,7 +14,7 @@
 
 .navbar {
   display: grid;
-  grid-template-columns: 1fr 1fr 3fr;
+  grid-template-columns: 1fr 3fr 5fr;
   grid-template-areas: 'logo searchBar menu';
   align-items: center;
 
